--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jose A. Eyzaguirre
 logo: /assets/img/headshot_circle.png
-description: Email: jneyza [at] umich [dot] edu
+description: jneyza[at]umich[dot]edu
 show_downloads: false
 theme: jekyll-theme-minimal
